<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_action_bar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/name"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

            <EditText
                android:id="@+id/name_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/please_enter_name"
                android:maxLines="2"
                android:padding="@dimen/margin_10"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/email"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

            <EditText
                android:id="@+id/email_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/empty_email"
                android:maxLines="2"
                android:padding="@dimen/margin_10"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/phoneno"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

            <EditText
                android:id="@+id/phone_number_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_username"
                android:maxLines="2"
                android:padding="@dimen/margin_10"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/message"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

            <EditText
                android:id="@+id/message_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/please_enter_message"
                android:maxLines="4"
                android:padding="@dimen/margin_10"
                android:textColor="@color/button_bg"
                android:textSize="@dimen/margin_13" />

        </LinearLayout>

    </LinearLayout>

    <com.victor.loading.newton.NewtonCradleLoading
        android:id="@+id/newton_cradle_loading"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_80"
        android:layout_centerInParent="true" />
</RelativeLayout>