<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="@dimen/margin_13"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/send_image_text_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/send_image"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/dialog_password_reset_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/margin_18"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <EditText
            android:id="@+id/dialog_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:background="@drawable/textbox"
            android:hint="@string/register_email_id"
            android:padding="@dimen/margin_10"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/off_black"
            android:textSize="@dimen/margin_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/margin_15"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />

            <LinearLayout
                android:id="@+id/cancel_submit_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="@dimen/margin_15"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/dialog_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="@dimen/margin_15"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>